sidebar listo en básico

--- a/admin-panel/src/index.css
+++ b/admin-panel/src/index.css
@@ -23,7 +23,11 @@
 	background-color: var(--color-gris-claro);
 }
 
-.btn-Activado{
+.btn-Activado[aria-current="page"]{
+	background-color: var(--color-celeste);
+}
+
+.btn-Activado:hover{
 	background-color: var(--color-celeste);
 }
 
