--- a/admin-panel/src/index.css
+++ b/admin-panel/src/index.css
@@ -2,17 +2,17 @@
 
 /* 🎨 Definimos la paleta de colores como variables CSS */
 :root {
-  --color-oscuro: #1D2A3E;
+  --azuloscuro: #1D2A3E;
   --color-celeste: #55C3D9;
   --color-gris-claro: #f5F5F5;
   --color-texto-claro: #FFFFFF;
-  --color-texto-oscuro: #1D2A3E;
+
   --color-claro: #313A4D;
 }
 
 
 .bg-sidebar {
-  background-color: var(--color-oscuro);
+  background-color: var(--azuloscuro);
 }
 
 .text-sidebar {
@@ -22,6 +22,7 @@
 .bg-gris {
 	background-color: var(--color-gris-claro);
 }
+
 
 .btn-Activado[aria-current="page"]{
 	background-color: var(--color-celeste);
@@ -33,4 +34,44 @@
 
 .btn-sinActivar{
 	background-color: var(--color-claro);
+}
+
+h1{
+  font-weight:600;
+  font-size: 25px;
+  color: var(--azuloscuro)
+}
+
+
+
+
+/* Scrollbar para navegadores basados en WebKit (Chrome, Edge, Brave, Safari) */
+.scrollbar-custom::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+.scrollbar-custom::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 100px;
+}
+
+.scrollbar-custom::-webkit-scrollbar-thumb {
+  background-color: #1D2A3E; /* color normal */
+  border-radius: 100px;
+  border: 2px solid transparent;
+  transition: background-color 0.2s ease;
+}
+
+.scrollbar-custom::-webkit-scrollbar-thumb:hover {
+  background-color: #27364d; /* al hacer hover */
+}
+
+.scrollbar-custom::-webkit-scrollbar-thumb:active {
+  background-color: #121b28; /* al hacer clic o arrastrar */
+}
+
+/* Scrollbar para Firefox */
+.scrollbar-custom {
+  scrollbar-color: #1D2A3E #f1f1f1;
 }
