--- a/admin-panel/src/index.css
+++ b/admin-panel/src/index.css
@@ -41,3 +41,10 @@
   font-size: 25px;  
   color: var(--azuloscuro);
 }
+
+.h2{
+  font-weight:400;
+  font-size: 16px;  
+  color: var(--azuloscuro);
+}
+
